--- a/projectBooking/src/main/webapp/WEB-INF/resources/css/admin/service_type.css
+++ b/projectBooking/src/main/webapp/WEB-INF/resources/css/admin/service_type.css
@@ -145,3 +145,12 @@ body {font-family: Arial, Helvetica, sans-serif;}
 		padding: 0;
 	}
 }
+#grid-data-api th[data-column-id="index"] {
+	width: 60px;
+}
+#grid-data-api th[data-column-id="commands"]{
+	width: 100px;
+}
+#grid-data-api th[data-column-id="cretatedate"] {
+	width: 150px;
+}
